Fix: dropdown alignments

--- a/src/app/learner/pages/learner-my-course/learner-my-course.component.scss
+++ b/src/app/learner/pages/learner-my-course/learner-my-course.component.scss
@@ -1635,8 +1635,8 @@ hr {
 }
 ::ng-deep .roleDropdDwnBtn{
   position: absolute !important;
-    right: 61% !important;
-    bottom: 23% !important;
+    right: 60% !important;
+    bottom: 4% !important;
 }
 .roleBtn{
   background-color: $color-white;
@@ -1680,7 +1680,7 @@ hr {
 }
 ::ng-deep .childMenu{
   width: 155px !important;
-    margin-top: 64px !important;
+    margin-top: 49px !important;
 }
 ::ng-deep .subchildMenu{
   width: 155px !important;
